--- a/bower.json
+++ b/bower.json
@@ -1,19 +1,20 @@
 {
-    "name": "123CompletedWebsite",
-    "version": "0.0.0",
-    "dependencies": {
-        "angular": "~1.2.0",
-        "json3": "~3.2.4",
-        "jquery": "~1.9.1",
-        "bootstrap-sass": "~2.3.1",
-        "modernizr": "~2.7.0",
-        "es5-shim": "~2.0.8",
-        "angular-route": "~1.2.0",
-        "angular-resource": "~1.2.0",
-        "angular-sanitize": "~1.2.0"
-    },
-    "devDependencies": {
-        "angular-mocks": "~1.2.0",
-        "angular-scenario": "~1.2.0"
-    }
+  "name": "123CompletedWebsite",
+  "version": "0.0.0",
+  "dependencies": {
+    "angular": "~1.2.9",
+    "json3": "~3.2.4",
+    "jquery": "~1.9.1",
+    "bootstrap-sass": "~3.0.2",
+    "modernizr": "~2.7.0",
+    "es5-shim": "~2.0.8",
+    "angular-route": "~1.2.9",
+    "angular-resource": "~1.2.9",
+    "angular-animate": "~1.2.9",
+    "angular-sanitize": "~1.2.9"
+  },
+  "devDependencies": {
+    "angular-mocks": "~1.2.9",
+    "angular-scenario": "~1.2.9"
+  }
 }
