--- a/bower.json
+++ b/bower.json
@@ -2,19 +2,24 @@
   "name": "123CompletedWebsite",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.9",
+    "angular": "1.2.10",
     "json3": "~3.2.4",
-    "jquery": "~1.9.1",
-    "bootstrap-sass": "~3.0.2",
-    "modernizr": "~2.7.0",
-    "es5-shim": "~2.0.8",
-    "angular-route": "~1.2.9",
-    "angular-resource": "~1.2.9",
-    "angular-animate": "~1.2.9",
-    "angular-sanitize": "~1.2.9"
+    "jquery": "1.9.1",
+    "bootstrap-sass": "3.0.2",
+    "modernizr": "2.7.0",
+    "es5-shim": "2.0.8",
+    "angular-route": "1.2.10",
+    "angular-resource": "1.2.10",
+    "angular-animate": "1.2.10",
+    "angular-sanitize": "1.2.10",
+    "revolunet-angular-carousel": "0.1.6"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.9",
-    "angular-scenario": "~1.2.9"
+    "angular-mocks": "1.2.10",
+    "angular-scenario": "1.2.10"
+  },
+  "resolutions": {
+    "angular": "1.2.10",
+    "angular-touch": "~1.2.10"
   }
 }
