ticker is now working! also started parting sass stylesheets into components. introducing font-awesome.

--- a/app/data/acknowledgments.json
+++ b/app/data/acknowledgments.json
@@ -36,7 +36,7 @@
         "ref": "Gershon Diner, VP Customer Services & Support, GigaSpaces"
     },
     {
-        "quote": "1 2 3 Completed</span> helped us provide a top of the line solution that is ready for extreme deployment environments.",
+        "quote": "1 2 3 Completed helped us provide a top of the line solution that is ready for extreme deployment environments.",
         "ref": "Mia Urman, CEO, OraPlayer"
     },
     {
