--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-resource": "1.2.10",
     "angular-animate": "1.2.10",
     "angular-sanitize": "1.2.10",
-    "revolunet-angular-carousel": "0.1.6"
+    "revolunet-angular-carousel": "0.1.6",
+    "font-awesome": "~4.0.3"
   },
   "devDependencies": {
     "angular-mocks": "1.2.10",
