adding a banner and some stock photos, removing redundant images and controller.

--- a/app/data/acknowledgments.json
+++ b/app/data/acknowledgments.json
@@ -4,7 +4,7 @@
         "ref": "Gershon Diner, VP Customer Services & Support, GigaSpaces"
     },
     {
-        "quote": "Our relationship with 1 2 3 Completed has proven itself for over 15 years now. We are happy to place any projects in their safe hands.",
+        "quote": "Our relationship with 123 Completed has proven itself for over 15 years now. We are happy to place any projects in their safe hands.",
         "ref": "Noam Wekser, Oracle University Country Leader, Oracle"
     },
     {
@@ -24,11 +24,11 @@
         "ref": "Gadi Inon, Director, Solutions Architect, Mobixell Networks"
     },
     {
-        "quote": "1 2 3 Completed work is always extremely professional, and on time.",
+        "quote": "123 Completed work is always extremely professional, and on time.",
         "ref": "Nir Levion, General Manager, BluePhoenix KMS"
     },
     {
-        "quote": "Our experience with 1 2 3 Completed was nothing but sheer success.",
+        "quote": "Our experience with 123 Completed was nothing but sheer success.",
         "ref": "Chen Burshan, VP Product Management ComAbility"
     },
     {
@@ -36,7 +36,7 @@
         "ref": "Gershon Diner, VP Customer Services & Support, GigaSpaces"
     },
     {
-        "quote": "1 2 3 Completed helped us provide a top of the line solution that is ready for extreme deployment environments.",
+        "quote": "123 Completed helped us provide a top of the line solution that is ready for extreme deployment environments.",
         "ref": "Mia Urman, CEO, OraPlayer"
     },
     {
@@ -48,7 +48,7 @@
         "ref": "Guy Lubovitch, GigaSpaces"
     },
     {
-        "quote": "I recommend 1 2 3 Completed services to all my colleagues, the added value they bring is huge in many aspects and so is their business approach.",
+        "quote": "I recommend 123 Completed services to all my colleagues, the added value they bring is huge in many aspects and so is their business approach.",
         "ref": "Nir Lavion, CEO, DSKnowledge"
     },
     {
@@ -56,7 +56,7 @@
         "ref": "Menahem Zeltzer, Tadiran Telecom"
     },
     {
-        "quote": "We at Pontis are happy to be a 1 2 3 Completed reference and recommend 1 2 3 Completed services to all.",
+        "quote": "We at Pontis are happy to be a 123 Completed reference and recommend 123 Completed services to all.",
         "ref": "Shachar Segev, CTO, Pontis"
     },
     {
@@ -64,7 +64,7 @@
         "ref": "Gershon Diner, VP Customer Services & Support, GigaSpaces"
     },
     {
-        "quote": "The 1 2 3 Completed company name says it all. These guys know how to deliver!",
+        "quote": "The 123 Completed company name says it all. These guys know how to deliver!",
         "ref": "Lanir Shacham, CTO, Correlsense"
     },
     {
@@ -76,7 +76,7 @@
         "ref": "Oren Zucker, Infrastructure and Projects Group Manager, Mobixell"
     },
     {
-        "quote": "1 2 3 Completed met every technical challenge in a creative, efficient, on time and on budget manner.",
+        "quote": "123 Completed met every technical challenge in a creative, efficient, on time and on budget manner.",
         "ref": "Avishai Shafir, VP Marketing & Pre-sale, BluePhoenix KMS"
     },
     {
