--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-animate": "1.2.10",
     "angular-sanitize": "1.2.10",
     "revolunet-angular-carousel": "0.1.6",
-    "font-awesome": "~4.0.3"
+    "font-awesome": "~4.0.3",
+    "angular-masonry": "~0.7.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.10",
@@ -21,6 +22,6 @@
   },
   "resolutions": {
     "angular": "1.2.10",
-    "angular-touch": "~1.2.10"
+    "jquery": "<= 1.9.1"
   }
 }
