--- a/bower.json
+++ b/bower.json
@@ -12,9 +12,9 @@
     "angular-resource": "1.2.10",
     "angular-animate": "1.2.10",
     "angular-sanitize": "1.2.10",
-    "revolunet-angular-carousel": "0.1.6",
     "font-awesome": "~4.0.3",
-    "angular-masonry": "~0.7.0"
+    "angular-masonry": "~0.7.0",
+    "angular-bootstrap": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.10",
