--- a/bower.json
+++ b/bower.json
@@ -2,26 +2,25 @@
   "name": "123CompletedWebsite",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "1.2.10",
+    "angular": "~1.2.14",
     "json3": "~3.2.4",
     "jquery": "1.9.1",
     "bootstrap-sass": "3.0.2",
     "modernizr": "2.7.0",
     "es5-shim": "2.0.8",
-    "angular-route": "1.2.10",
-    "angular-resource": "1.2.10",
-    "angular-animate": "1.2.10",
-    "angular-sanitize": "1.2.10",
+    "angular-route": "~1.2.14",
+    "angular-resource": "~1.2.14",
+    "angular-animate": "~1.2.14",
+    "angular-sanitize": "~1.2.14",
     "font-awesome": "~4.0.3",
     "angular-masonry": "~0.7.0",
     "angular-bootstrap": "~0.10.0"
   },
   "devDependencies": {
-    "angular-mocks": "1.2.10",
-    "angular-scenario": "1.2.10"
+    "angular-mocks": "~1.2.14",
+    "angular-scenario": "~1.2.14"
   },
   "resolutions": {
-    "angular": "1.2.10",
     "jquery": "<= 1.9.1"
   }
 }
