--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-    "name": "123completedwebsite",
-    "version": "0.0.1",
-    "dependencies": {
-        "karma-script-launcher": "~0.1.0",
-        "karma-chrome-launcher": "~0.1.1",
-        "karma-html2js-preprocessor": "~0.1.0",
-        "karma-firefox-launcher": "~0.1.2",
-        "karma-jasmine": "~0.1.3",
-        "karma-coffee-preprocessor": "~0.1.1",
-        "requirejs": "~2.1.9",
-        "karma-requirejs": "~0.2.0",
-        "karma-phantomjs-launcher": "~0.1.1",
-        "karma": "~0.10.6",
-        "grunt-karma": "~0.6.2"
-    },
-    "devDependencies": {
-        "grunt": "~0.4.2",
-        "grunt-contrib-copy": "~0.5.0",
-        "grunt-contrib-concat": "~0.3.0",
-        "grunt-contrib-uglify": "~0.3.2",
-        "grunt-contrib-compass": "~0.7.2",
-        "grunt-contrib-jshint": "~0.8.0",
-        "grunt-contrib-cssmin": "~0.6.0",
-        "grunt-contrib-connect": "~0.6.0",
-        "grunt-contrib-clean": "~0.5.0",
-        "grunt-contrib-htmlmin": "~0.2.0",
-        "grunt-contrib-imagemin": "~0.5.0",
-        "grunt-contrib-watch": "~0.5.3",
-        "grunt-usemin": "~0.1.13",
-        "grunt-rev": "~0.1.0",
-        "grunt-karma": "~0.6.2",
-        "grunt-open": "~0.2.3",
-        "grunt-concurrent": "~0.4.3",
-        "matchdep": "~0.3.0",
-        "connect-livereload": "~0.3.2",
-        "grunt-ngmin": "~0.0.3",
-        "grunt-ftp-deploy": "~0.1.1"
-    },
-    "engines": {
-        "node": ">=0.10.0"
-    }
+  "name": "123completedwebsite",
+  "version": "0.0.1",
+  "dependencies": {
+    "karma-script-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.1",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.2",
+    "karma-jasmine": "~0.1.3",
+    "karma-coffee-preprocessor": "~0.1.1",
+    "requirejs": "~2.1.9",
+    "karma-requirejs": "~0.2.0",
+    "karma-phantomjs-launcher": "~0.1.1",
+    "karma": "~0.10.6",
+    "grunt-karma": "~0.6.2",
+    "connect-modrewrite": "~0.6.4-pre"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-copy": "~0.5.0",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-contrib-compass": "~0.7.2",
+    "grunt-contrib-jshint": "~0.8.0",
+    "grunt-contrib-cssmin": "~0.6.0",
+    "grunt-contrib-connect": "~0.6.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-htmlmin": "~0.2.0",
+    "grunt-contrib-imagemin": "~0.5.0",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-usemin": "~0.1.13",
+    "grunt-rev": "~0.1.0",
+    "grunt-karma": "~0.6.2",
+    "grunt-open": "~0.2.3",
+    "grunt-concurrent": "~0.4.3",
+    "matchdep": "~0.3.0",
+    "connect-livereload": "~0.3.2",
+    "grunt-ngmin": "~0.0.3",
+    "grunt-ftp-deploy": "~0.1.1"
+  },
+  "engines": {
+    "node": ">=0.10.0"
+  }
 }
